# 20251107_cpp_sandbox1

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  draw_helper.h  game.cc  game_constant.h  game_manager.h  i_game_impl.h
game/: example_geometries.c  example_multiple_stream.c  example_simple_playback.c  snake.cc  snake.h  test_impl_1.cc  test_impl_1.h  test_impl_2.cc  test_impl_2.h  test_impl_3.h
game_manager/: component.h  draw_helper.cc  draw_helper.h  entity_manager.h  game_impl.h  game_manager.cc  game_manager.h  sound_synthesizer.h
game_manager/entities/: rect_entity.h  rotate_rect_entity.h  text_entity.h
game_manager/utilities/: fps_counter.h  texture_loader.h
resources/images/: nonchang_20240917.aseprite
resources/tiled_data_old_copy/: TestMapData.mjs  mysprite_work1.tmj  mysprite_work1.tmx
resources/tiled_data_old_copy/TiledMaps/: PlatformerTest1.tmj
resources/tiled_data_old_copy/TiledMaps/Images/: nonchang-20240917.tsj
sound/: sound.h  sound_constants.h
sound/core/: envelope.cc  envelope.h  oscillator.cc  oscillator.h  synthesizer.cc  synthesizer.h
sound/effect/: audio_effect.h  biquad_filter.cc  biquad_filter.h  volume_modulation.cc  volume_modulation.h
sound/mixer/: audio_mixer.cc  audio_mixer.h
sound/mml/: mml_parser.h
sound/sequencer/: bgm_manager.cc  bgm_manager.h  multi_track_sequencer.cc  multi_track_sequencer.h  sequencer.cc  sequencer.h
sound/types/: note.h  wave_type.h
sound/utilities/: fixed_note_sequence.h  music_utilities.h
worklog/: 20251107_1430.md  20251107_2201.md  20251108_1219.md  20251108_1330.md  20251108_1900.md  20251108_2003.md  20251108_2007.md  20251108_2215.md  20251108_2225.md  20251108_2249.md  20251108_2301.md  20251108_2315.md  20251108_2326.md  20251109_0802.md  20251109_1117.md  20251109_1128.md  20251109_1148.md  20251109_1836.md  20251109_1900.md  20251109_2008.md  20251109_2030.md  20251109_2100.md  20251109_2130.md  20251110_0001.md  20251110_0030.md  20251110_0100.md  20251110_1140.md  20251110_1157.md  20251110_1205.md  20251110_1447.md  20251110_1601.md  20251110_1613.md  20251110_1820.md  20251110_1840.md  20251110_1920.md  20251110_2030.md  20251110_2206.md  20251110_2214.md  20251110_2228.md  20251110_2317.md  (+7 more)
